--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,81 @@
-*{
-margin : 0;
-padding : 0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.logo{
+.background {
+    background: rgba(0, 0, 0, 0.7) url(../common/bg.jpg);
+    background-size: cover;
+    background-blend-mode: darken;
+    height: 37vw;
+    max-height: 37vw;
+    overflow: hidden;
+}
+
+.header{
+    border: 4px solid wheat;
+}
+
+.logo {
     width: 20%;
     /* background-color: yellowgreen; */
     display: flex;
-    justify-content: center; 
-    
+    justify-content: center;
+
 }
 
-.logo img{
-width: 33%;
-border: 1px solid white;
-border-radius: 50%;
+.logo img {
+    width: 66%;
+   
 }
 
-.navbar{
-display: flex;
-background: rgba(76, 175, 80, 0.1);
+.navbar {
+    display: flex;
+    /* border: 1px solid; */
+    /* background: rgba(76, 175, 80, 0.1); */
 }
 
-.navlist{
-display: flex;
-align-items: center;
+.navlist {
+    display: flex;
+    align-items: center;
+    border: 1px solid;
 }
+
 .navlist li {
     list-style: none;
     /* background-color: black; */
     padding: 13px 12px;
+    /* border: 1px solid; */
 
 }
-.navlist li a{
+
+.navlist li a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-family: Calibri;
-    }
-    
-.navlist li a:hover{
-color: gray;
- }
+}
+
+.navlist li a:hover {
+    color: gray;
+}
+
+.innerElement{
+    display: flex;
+    justify-content: center;
+
+    width: 60%;
+    align-items: center;
+    height: 86%;
+}
+
+.HeaderContent{
+/* background-color: yellow; */
+
+color: white;
+margin-left: 20%;
+margin-top: 20%;
+}
+
+.FirstElement{
+    width: 100%;
+}
