--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto+Slab&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,38 +9,45 @@
     background: rgba(0, 0, 0, 0.7) url(../common/bg.jpg);
     background-size: cover;
     background-blend-mode: darken;
-    height: 37vw;
+    height: 500px;
     max-height: 37vw;
     overflow: hidden;
 }
 
-.header{
-    border: 4px solid wheat;
-}
 
 .logo {
     width: 20%;
     /* background-color: yellowgreen; */
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center; */
+    padding-left: 20px;
+    padding-top: 6px;
 
 }
 
 .logo img {
-    width: 66%;
-   
+    width: 74%;
+
+
 }
 
 .navbar {
     display: flex;
-    /* border: 1px solid; */
-    /* background: rgba(76, 175, 80, 0.1); */
+    justify-content: space-between;
+    /* border-bottom: 0.1px solid gray; */
+    width: 100%;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.7) url(../common/bg.jpg);
+    background-size: cover;
+    background-blend-mode: darken;
+    
+
 }
 
 .navlist {
     display: flex;
     align-items: center;
-    border: 1px solid;
+    padding-right: 20px;
 }
 
 .navlist li {
@@ -46,7 +55,22 @@
     /* background-color: black; */
     padding: 13px 12px;
     /* border: 1px solid; */
+    text-align: center;
+}
 
+.burger{
+    width: 30px;
+    height: 1px;
+    background-color: white;
+    margin-top: 6px;
+
+}
+.burgerMain {
+    margin: 3px 8px 0px 0px;
+    width: 30%;
+    text-align: -webkit-right;
+    text-align: -moz-right;
+    display: none;
 }
 
 .navlist li a {
@@ -59,23 +83,96 @@
     color: gray;
 }
 
-.innerElement{
+.innerElement {
     display: flex;
     justify-content: center;
-
     width: 60%;
     align-items: center;
     height: 86%;
 }
 
-.HeaderContent{
-/* background-color: yellow; */
+.HeaderContent {
+    /* background-color: yellow; */
 
-color: white;
-margin-left: 20%;
-margin-top: 20%;
+    color: white;
+    margin-left: 16px;
+    margin-top: 40%;
 }
 
-.FirstElement{
+.FirstElement {
     width: 100%;
 }
+
+/* Body part CSS starts here */
+
+.bodyPart {
+    margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+}
+
+.about {
+
+}
+
+.about p {
+
+}
+.bodyContent {
+    padding: 16px;
+    font-family: Calibri;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: justify;
+    margin: auto;
+    width: 80%;
+}
+
+p.visionTitle {
+    align-items: center;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 30px;
+    padding-bottom: 16px;
+}
+
+.centerAlignPara {
+    text-align: center;
+}
+
+/* productis */
+
+.product {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.productList {
+
+    width: 100%;
+    text-align: center;
+    margin: 8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.productList img {
+    width: 100%;
+    object-fit: cover;
+
+}
+.productList p {
+padding: 8px;
+}
+/* Products end here */
+/* footer starts here */
+.footer {
+    background: grey;
+    font-family: Calibri;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: center;
+    height: 30px;
+    color: white;
+    margin: auto;
+}
+    /* footer ends here */
