--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ padding: 8px;
     font-size: 14px;
     line-height: 1.5;
     text-align: center;
-    height: 30px;
+    height: 100%;
     color: white;
     margin: auto;
 }
