--- a/css/product.css
+++ b/css/product.css
@@ -34,7 +34,7 @@ body {
 
 
 .productTitle {
-    font-size: 3vw;
+    font-size: 46px;
     font-weight: 600;
     color: blueviolet;
 }
@@ -81,7 +81,7 @@ p.descpalmner {
         background-size: cover;
         background-blend-mode: darken;
         height: 800px;
-        max-height: 70vw;
+        max-height: 75vw;
         overflow-x: auto;
         overflow-y: hidden;
     }
