contact us page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -119,4 +119,15 @@
         }
         /* End of this is for the product page */
 
+        .contactiFrame {
+
+            width: 100%;
+            
+        }
+        .Contacttext {
+        
+            width: 100%;
+
+        }
+
 }
